worked on issue #105
Cameras, when loading, now generate html first and then the image is loaded. This should prevent the z-index from getting messed up on cameras when they are loaded in.

--- a/styles/style.css
+++ b/styles/style.css
@@ -305,11 +305,10 @@ select{
 }
 .top-container{
 	clear: both;
-	height: 100vh;
-	width: 100vw;
+	height: 99.9vh;
+	width: 99.9vw;
 	background-color: transparent;
 	z-index: 0;
-	overflow: hidden;
 }
 .top-container h2{
 	color: #DEDEDE;
@@ -517,6 +516,7 @@ div.logo_container{
 .container{
 	margin-left: auto;
 	margin-right: auto;
+	overflow: hidden;
 }
 .th{
 	float: left;	
